fix: stop body from being black even in dark mode (for now)

--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -27,7 +27,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background: rgba(255, 255, 255, .1);
+	background: #eee;
 }
 
 * {
